Revert "Java 17 -> Java 8"
This reverts commit d281022f6dec8e0cac4816770f02b159a82e0de2.