@@ -24,7 +24,6 @@ import java.util.*;
 import java.util.List;
 import java.util.Timer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class CrashAssistantGUI {
     private static JFrame frame = null;
@@ -58,7 +57,7 @@ public class CrashAssistantGUI {
         titleLabel.setAlignmentX(Component.LEFT_ALIGNMENT);
         titleLabel.setFont(titleLabel.getFont().deriveFont(16f));
 
-        HashMap<String, String> hrefOptions = new HashMap<String, String>() {{
+        HashMap<String, String> hrefOptions = new HashMap<>() {{
             put("$CONFIG.text.support_name$", null);
             put("$LANG.gui.upload_all_comment$", null);
         }};
@@ -271,7 +270,7 @@ public class CrashAssistantGUI {
                 SwingUtilities.invokeAndWait(() -> {
                     JOptionPane optionPane = new JOptionPane(
                             CrashAssistantGUI.getEditorPane(LanguageProvider.get("gui.duplicated_mod_warn") +
-                                    String.join("\n", mods.stream().map(Mod::getJarName).collect(Collectors.toList())), false),
+                                    String.join("\n", mods.stream().map(Mod::getJarName).toList()), false),
                             JOptionPane.WARNING_MESSAGE,
                             JOptionPane.DEFAULT_OPTION
                     );
